created basic working app
